<resources>
    <string name="app_name">Buckoid</string>
    <string name="app_details">Choose any category of your choice and play Quiz . Get your Score and Earn money according to your performance. Come daily to play and get daily Coins. Convert Your coins and transfer money to your banks.Play Quiz of your choice and collect coins.Spin wheel and watch ads to collect more coins. Come daily to this app and get Free coins. Invite your friends to this app and get coins when they play Quiz.Using the app collect coins. After collecting coins(minimum=50,000) withdraw money According to coins collected in your wallet. You are able to withdraw your money by google pay.</string>
    <string name="new_transaction">New Transaction</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="shopping">Shopping</string>
    <string name="transport">Transport</string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="education">Education</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="back">Back</string>
    <string name="details">Details</string>
    <string name="add_few_details_before_you_continue">Add Few details before You Continue…</string>
    <string name="your_name">Your Name</string>
    <string name="next">NEXT</string>
    <string name="name_">Name :</string>
    <string name="are_you_sure_want_to_delete_the_transaction">Are you sure, want to delete the Transaction?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="logo">Logo</string>
    <string name="all">All</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all_transactions">All Transactions</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="icon">Icon</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="your_expenses">Your Expenses</string>
    <string name="add_your_transaction_for_this_month">Add Your Transaction for this Month</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="drawericon">drawerIcon</string>
    <string name="name">Name :</string>
    <string name="edit">edit</string>
    <string name="settings">Settings</string>
    <string name="darkmode">DarkMode</string>
    <string name="share_to_friends">Share to Friends</string>
    <string name="about_us">About Us</string>
    <string name="rate_us_on_appstore">Rate us On AppStore</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="update_details">Update Details</string>
    <string name="update">Update</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="yearly_budget">Yearly Budget</string>
    <string name="fingerprint_protection">Fingerprint Lock</string>
    <string name="signup_with_google">SignUp With Google</string>
    <string name="we_require_your_google_account_with_google_drive_permission_to_keep_backup_of_all_your_data">We require your Google Account with Google Drive permission to keep Backup of all your data.</string>
    <string name="expense_tracking">Expense Tracking.</string>
    <string name="simple">Simple</string>
    <string name="backup_data">Backup Data</string>
    <string name="drive_backup">Drive Backup</string>
    <string name="last_backup">Last Backup</string>
    <string name="back_up_your_data_to_google_drive_you_can_restore_them_when_you_reinstall_buckoid_app_and_signin_with_google_account">Back up your data to Google Drive. You can restore them when you reinstall Buckoid App and signin with Google Account.</string>
    <string name="we_strongly_recommend_that_you_take_backup_regularly_from_the_app_as_backup_to_google_drive_is_not_automatic_doing_so_would_keep_your_data_safe_even_if_your_device_is_lost_damaged">We strongly recommend that you take backup regularly from the app (as backup to Google Drive is not automatic). Doing so would keep your data safe even if your device is lost/damaged.</string>
    <string name="google_drive_setting">Google Drive Setting</string>
    <string name="transaction_details_backed_up_in_google_drive_are_not_protected_by_buckoid_end_to_end_encryption">Transaction details backed up in Google Drive are not protected by Buckoid end-to-end encryption.</string>
    <string name="google_account">Google Account</string>
    <string name="onBoarding_title_1">Easy Expense Tracking</string>
    <string name="onBoarding_title_2">Categorised Data Chart</string>
    <string name="onBoarding_title_3">Filter Monthly / Yearly Expenses</string>
    <string name="onBoarding_desc_1">Keep track of your personal expenses and compare them to your monthly income with the budget planner.</string>
    <string name="onBoarding_desc_2">Allergic to numbers? See your spending statistics on colorful pie chart with different category.</string>
    <string name="onBoarding_desc_3">Check how much you have spend previous month wise and save money accordingly.</string>
</resources>